Bugfix: Nav overflows screen

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body{
     justify-content: space-between;
 }
 nav{
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
